<resources>
    <string name="app_name">Vaccine Now 2.0</string>
    <string name="appname">Vaccine Now</string>
    <string name="content_desc_splash_screen_json">splash screen json</string>
    <string name="content_desc_logo">logo</string>
    <string name="label_covid19_info">COVID-19\nInformation &amp; News</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="web_icon">web icon</string>
    <string name="click_to_know_the_latest_updates_on_malaysia_s_vaccination_program">Click to know the latest updates on Malaysia\'s vaccination program</string>
    <string name="www_vaksincovid_gov_my">http://www.vaksincovid.gov.my</string>
    <string name="www_moh_gov_my">http://www.moh.gov.my</string>
    <string name="click_to_know_the_latest_health_updates_from_the_ministry_of_health_moh">Click to know the latest health updates from The Ministry of Health (MOH)</string>
    <string name="get_your_vaccine_now">Get your vaccine now!</string>
    <string name="vaccination">Vaccination</string>
    <string name="faqs">FAQs</string>
    <string name="things_to_do">Things To Do</string>
    <string name="covid_19_info_amp_news"><![CDATA[COVID-19 Info & News]]></string>
    <string name="text_astra_zeneca">Astra Zeneca</string>
    <string name="text_covid_19_vaccination_in_malaysia">COVID-19 Vaccination in Malaysia</string>
    <string name="text_sinovac_coronavac">Sinovac - Coronavac</string>
    <string name="text_pfizer_biontech">Pfizer - BioNTech</string>
    <string name="vaccine_info_pfizer"><b>Company:</b> US, Germany\n<b>Type of Vaccine:</b>mRNA\n<b>Number of Shots:</b> 2 shots, 21 days apart into muscle
        \n<b>Effectiveness:</b> 95%\n<b>Does NOT contain:</b> Eggs, preservatives, latex\n\n
        <b>What is the Pfizer-BioNTech COVID-19 Vaccine?</b>\nThe Pfizer-BioNTech COVID-19 Vaccine is an unapproved vaccine that may preventCOVID-19.
        There is no FDA-approved vaccine to prevent COVID-19.The FDA has authorized the emergency use of the Pfizer-BioNTech COVID-19 Vaccine to prevent
        COVID-19 in individuals 12 years of age and older under an Emergency Use Authorization (EUA).\n\n<b>Who should get the Pfizer-BioNTech COVID-19 Vaccine?</b>
        \nFDA has authorized the emergency use of the Pfizer-BioNTech COVID-19 Vaccine individuals 12 years of age and older.\n\n<b>Who should NOT get the Pfizer-BioNTech COVID-19 Vaccine</b>
        \nYou should not get the Pfizer-BioNTech COVID-19 Vaccine if you:\n
• had a severe allergic reaction after a previous dose of this vaccine\n
• had a severe allergic reaction to any ingredient of this vaccine\n
    </string>
    <string name="vaccine_info_sinovac"><b>Company:</b> China\n<b>Type of Vaccine:</b> Inactivated virus vaccine\n<b>Number of Shots:</b> 2 shots, 21 days apart into muscle
        \n<b>Effectiveness:</b> 68%\n<b>Does NOT contain:</b> Eggs, preservatives, latex\n\n
        <b>What is the Sinovac CoronaVac COVID-19 Vaccine?</b>\nThe Sinovac CoronaVac COVID-19 Vaccine is an unapproved vaccine that may preventCOVID-19.
        There is no FDA-approved vaccine to prevent COVID-19.The FDA has authorized the emergency use of the Sinovac CoronaVac COVID-19 Vaccine to prevent
        COVID-19 in individuals 12 years of age and older under an Emergency Use Authorization (EUA).\n\n<b>Who should get the Sinovac CoronaVac COVID-19 Vaccine?</b>
        \nFDA has authorized the emergency use of the Sinovac CoronaVac COVID-19 Vaccine individuals 18 years of age and older.\n\n<b>Who should NOT get the Sinovac CoronaVac COVID-19 Vaccine:</b>
        \nYou should not get the Sinovac CoronaVac COVID-19 Vaccine if you:\n
• had a severe allergic reaction after a previous dose of this vaccine\n
• had a severe allergic reaction to any ingredient of this vaccine\n
    </string>
    <string name="vaccine_info_az"><b>Company:</b> Oxford\n<b>Type of Vaccine:</b> Chimpanzee adenovirus\n<b>Number of Shots:</b> 2 shots, 28 days apart into muscle
        \n<b>Effectiveness:</b> 90%\n<b>Does NOT contain:</b> Eggs, preservatives, latex\n\n
        <b>What is the AstraZeneca COVID-19 Vaccine?</b>\nThe AstraZeneca COVID-19 Vaccine is an unapproved vaccine that may preventCOVID-19.
        There is no FDA-approved vaccine to prevent COVID-19.The FDA has authorized the emergency use of the AstraZeneca COVID-19 Vaccine to prevent
        COVID-19 in individuals 12 years of age and older under an Emergency Use Authorization (EUA).\n\n<b>Who should get the AstraZeneca COVID-19 Vaccine?</b>
        \nFDA has authorized the emergency use of the AstraZeneca COVID-19 Vaccine individuals 18 years of age and older.\n\n<b>Who should NOT get the AstraZeneca COVID-19 Vaccine</b>
        \nYou should not get the AstraZeneca COVID-19 Vaccine if you:\n
• had a severe allergic reaction after a previous dose of this vaccine\n
• had a severe allergic reaction to any ingredient of this vaccine\n
    </string>
    <string name="expandbutton">expandButton</string>
    <string name="personal_nhealthcare"><![CDATA[Personal Healthcare]]></string>
    <string name="latest_information_about_covid_19">Latest information about COVID-19</string>
    <string name="declaration">
        1. \t\t The Covid-19 vaccine may lead to side effects as stated in the Covid-19 Vaccine Information for Recipients.
        \n\n2. \t\t The signatory is responsible for any possible risks because the benefits far outweigh the side effects.
        \n\n3. \t\t The vaccine does not guarantee the signatory will not be infected with Covid-19 in the future.
        \n\n4. \t\t The signatory consents to receiving the vaccine voluntarily to complete the vaccination as scheduled.
        \n\n5. \t\t Currently employed on a paid basis in an eligible occupation in Phase 1A.
        \n\n6. \t\t Currently employed on a paid or unpaid (volunteer) basis in an eligible occupation in Phase 1B.
        \n\n7. \t\t A resident of a residential aged care facility or living in a disability facility.
        \n\n8. \t\t A household contact of a quarantine or border worker eligible under Phase 1A.
        \n\n9. \t\t Aged 50 years or older.
        \n\n10. \t\t Undergone or undergoing one or more of the specified treatments or procedures for Phase 1B.
        \n\n11. \t\t Diagnosed by a medical practitioner with one or more of the specified medical conditions for Phase 1B.
        \n\n12. \t\t Diagnosed with a disability or age-related condition and am attending center-based services.
        \n\n13. \t\t An essential career of a person with a disability or elderly person eligible under Phase 1A or Phase 1B.
        \n
</string>
    <string name="b_please_read_the_declaration_below_carefully_b"><b>Please read the declaration below carefully: \n</b></string>
    <string name="SubheadingDeclare"><b>People who are eligible under Phase 1A and Phase 1B of the rollout:</b></string>
    <string name="phase_1a"><b><u>Phase 1A</u></b></string>
    <string name="Declaration_phase_1A">
        1. \t\t People currently employed as frontline healthcare workers.
        \n\n2. \t\t People currently employed as quarantine and border workers.
        \n\n3. \t\t People currently residing or employed in residential aged care and disability care facilities.
    </string>
    <string name="phase_1b"><b><u>Phase 1B</u></b></string>
    <string name="Declaration_phase_1B">
        1. \t\t People currently employed on a paid or unpaid (volunteer) basis.
        \n\n 2. \t\t A household contact of a quarantine or border worker eligible under Phase 1A. \'Household contact\' means that you currently live at the same primary address.
        \n\n 3. \t\t Carer (paid or unpaid) of a person with a disability or an elderly person eligible in Phase 1A or 1B. This includes if a family member is providing essential
        care to a person with a disability or an elderly person eligible in Phase 1A or 1B, but does not include family members who are not carers. This includes carers of children
        with underlying medical conditions who would be eligible in Phase 1b but cannot be vaccinated due to age restrictions on approved COVID-19 vaccinations. For clarity, the
        elderly person or person with a disability does not need to be residing in an aged care facility or residential disability accommodation.
        \n\n 4. \t\t People who have been diagnosed with a disability or with age-related conditions (e.g. early onset dementia) attending centre-based services (e.g. day programs,
        respite care, supported employment).
        \n\n 5. \t\t People who have either undergone or are undergoing one or more of the following treatments or procedures.
        \n\n 6. \t\t People who have been diagnosed by a medical practitioner with one or more of the following edical conditions (this eligibility criteria applies to people aged 69 years and under)
    </string>
    <string name="registration_topInfo">Please ensure that all information provided is complete and accurate for a smooth and fuss-free registration.</string>
    <string name="registration_label_fullname">Full Name</string>
    <string name="registration_label_phone">Contact Number</string>
    <string name="registration_label_NRIC">NRIC</string>
    <string name="registration_label_NRIC_confirm">Confirm NRIC</string>
    <string name="label_registration_personalinfoTitle">Personal Information</string>
    <string name="label_registration_Title">VACCINE NOW\nREGISTER FOR YOU VACCINATION NOW</string>
    <string name="contentDesc_register_icon">registration_icon</string>
    <string name="label_register_currentAdd">Current Address</string>
    <string name="label_register_hint_address">Address Line</string>
    <string name="label_register_hint_city">City</string>
    <string name="label_register_hint_postalcode">ZIP</string>
    <string name="label_register_hint_state">State</string>
    <string name="label_register_hint_vaccinepreference">Vaccine Preference</string>
    <string name="padding"> \n\n </string>
    <string name="agreement">I confirm that I have read, consent and agree to the agreement of COVID-19 vaccination.\nI understand the risk and side effects of vaccines</string>
    <string name="ques1">Are you interested to take the COVID-19 vaccine?</string>
    <string name="ques2">Do you have any comorbidities?</string>
    <string name="ques3">Have you registered with the Department of Social Welfare Malaysia as a Disabled Person (OKU)?</string>
    <string name="ques1Expand">What is/are your reason(s) of not agreeing to receive COVID-19 vaccine (Your may select more than one reasons):</string>
    <string name="cbx1Ques1">Unsure of vaccine safety</string>
    <string name="cbx2Ques1">Unsure that the vaccine can protect me from the infection of COVID-19 pandemic</string>
    <string name="cbx3Ques1">Vaccine is not required for me as COVID-19 is not dangerous</string>
    <string name="cbx4ques1">Insufficient information for COVID-19 vaccine</string>
    <string name="vaccination_status">Vaccination Status</string>
    <string name="vaccine_preference">Vaccine Preference</string>
    <string name="notes">Notes</string>
    <string name="address">Address</string>
    <string name="phone">Phone</string>
    <string name="age">Age</string>
    <string name="ic">IC</string>
    <string name="name">Name</string>
</resources>