<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DeclarationVaccine">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarDeclare"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="#00a9b0 "
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:theme="@style/Toolbar_back_button_style"
        app:title="Declaration"
        app:titleMargin="2dp"
        app:titleTextColor="#FFFFFF" />

    <TextView
        android:id="@+id/txtHeaderDeclare"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:text="@string/b_please_read_the_declaration_below_carefully_b"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbarDeclare" />


    <ScrollView
        android:id="@+id/scrollViewDeclaration"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtHeaderDeclare">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txtDeclareContent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:inputType="textMultiLine"
                android:text="@string/declaration" />

            <TextView
                android:id="@+id/txtSubHeaderDeclare"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/SubheadingDeclare"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/txtSubSubHeaderDeclare"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/phase_1a"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/txtDeclareContent02"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:inputType="textMultiLine"
                android:text="@string/Declaration_phase_1A" />

            <TextView
                android:id="@+id/txtSubSubHeaderDeclare02"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/phase_1b"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/txtDeclareContent03"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:inputType="textMultiLine"
                android:text="@string/Declaration_phase_1B" />



        </LinearLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>